# Evergreen

./: CMakeLists.txt  README.md
books/: _usefull_links.txt
cmake/: evergreen.cmake
include/: CMakeLists.txt  Types.h
src/Core/: CMakeLists.txt  MoveOnly.h  MoveOnly.inl  RuntimeError.h
src/Core/src/: RuntimeError.cpp
src/DataSource/: CMakeLists.txt  IDataSource.h
src/DataSource/src/: DataSource.cpp  DataSource.h  DataSourceParameters.h
src/DataSourceManager/: CMakeLists.txt  DataSourceManager.h
src/DataSourceManager/src/: DataSourceManager.cpp
src/Kernel/: CMakeLists.txt
src/Kernel/src/: Loader.h
src/TestApp/: CMakeLists.txt
src/TestApp/src/: main.cpp
src/TestAppLib/: CMakeLists.txt  MainWindow.h
src/TestAppLib/src/: MainWindow.cpp  MainWindow.ui  Widget.cpp  Widget.h
